// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps render renders correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders current correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-finish"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-finish"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders labelPlacement correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-vertical"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders progressDot correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-vertical rc-steps-dot"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders progressDot function correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-vertical rc-steps-dot"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders status correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-finish"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-finish rc-steps-next-error"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-error rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders step with description 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders step with description and status 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-wait rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-process"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-finish"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders step with tailContent 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      >
        text
      </div>
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      >
        <div>
          content
        </div>
      </div>
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      >
        3
      </div>
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      >
        text
      </div>
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders step with type navigation 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal rc-steps-navigation"
>
  <div
    class="rc-steps-item rc-steps-item-finish"
  >
    <div
      class="rc-steps-item-container"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          Step 1
          <div
            class="rc-steps-item-subtitle"
            title="剩余 00:00:05 超长隐藏"
          >
            剩余 00:00:05 超长隐藏
          </div>
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description.
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
      role="button"
      tabindex="0"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          Step 2
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description.
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait rc-steps-item-disabled"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          Step 3
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders vertical correctly 1`] = `
<div
  class="rc-steps rc-steps-vertical"
>
  <div
    class="rc-steps-item rc-steps-item-process rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render renders with fasly children 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-wait rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          已完成
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          进行中
          <div
            class="rc-steps-item-subtitle"
            title="剩余 00:00:07"
          >
            剩余 00:00:07
          </div>
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-process"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-finish rc-steps-item-disabled"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          待运行
        </div>
        <div
          class="rc-steps-item-description"
        >
          xx
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps render should render svg finishIcon and errorIcon correctly 1`] = `
<div
  class="rc-steps rc-steps-horizontal rc-steps-label-horizontal"
>
  <div
    class="rc-steps-item rc-steps-item-finish rc-steps-next-error"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          Finished
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-error rc-steps-item-active"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          In Process
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
  <div
    class="rc-steps-item rc-steps-item-wait"
  >
    <div
      class="rc-steps-item-container"
    >
      <div
        class="rc-steps-item-tail"
      />
      <div
        class="rc-steps-item-content"
      >
        <div
          class="rc-steps-item-title"
        >
          Waiting
        </div>
        <div
          class="rc-steps-item-description"
        >
          This is a description
        </div>
      </div>
    </div>
  </div>
</div>
`;
